--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
     font_family:Arial,sans-serif;
     background-color:#87cefa;
-    margin :0;
-    padding :0;
+    margin :100px;
+    padding :100px;
     text-align:center;
 }
 
