--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ a{
 li{
     list-style-type: none;
     color:#e6e6fa;
-    background-color:#191970;
+    background-color:#4682b4;
 }
 
 .ashita{
