--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
+
 @media(max-width:670px){
-    width:700px
+    width:500px;
 }
 
 
     
 body{
-    font_family:Arial,sans-serif;
+    font-family:sans-serif;
     background-color:#87cefa;
     margin :100px;
     padding :100px;
@@ -14,11 +15,11 @@ body{
 
 h1{
     color:black;
-    font_size: 100px;
+    font-size: 100px;
 }
 
 h2{
-    font_size:100px;
+    font-size:100px;
 }
 
 a{
@@ -34,6 +35,11 @@ li{
     list-style-type: none;
     color:#e6e6fa;
     background-color:#4682b4;
+    margin:20px 20px;
+}
+
+.list{
+    width:20%;
 }
 
 .ashita{
@@ -44,12 +50,13 @@ li{
 .return{
     margin:100px;
     padding:100px;
+    display:block;
+    background-color: darkolivegreen;
+    border-radius: 50%;
 }
 
 .potechi{
     color:#ffff00;
-    font_size:500px;
-    font_family:'impact';
+    font-size:500px;
+    font-weight:bold ;
 }
-
-
